[package]
name = "material-icons"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
description = "Strongly-typed codepoint mappings for the Google Material Icons font"
keywords = ["gui", "material", "material-icons", "icon", "icons" ]
categories = ["gui"]
license = "Apache-2.0"
repository = "https://github.com/fschutt/material-icons"
readme = "README.md"
# Un-comment this to re-generate the lib.rs file
# build = "./generate.rs"

[dependencies]
